--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
         "start": "next start"
     },
     "dependencies": {
+        "@3rdweb/hooks": "^1.9.2",
         "@coinbase/wallet-sdk": "3.0.5",
-        "next": "12.1.4",
+        "ethers": "^5.6.4",
         "ganache": "7.0.3",
+        "next": "12.1.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "solc": "0.8.13",
         "truffle-hdwallet-provider": "1.0.17",
-        "use-wallet": "0.13.4",
-        "web3": "1.7.1"
+        "use-wallet": "0.13.4"
     }
 }
