--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@3rdweb/hooks": "^1.9.2",
         "@coinbase/wallet-sdk": "3.0.5",
+        "@nextui-org/react": "^1.0.0-beta.6",
         "ethers": "^5.6.4",
         "ganache": "7.0.3",
         "next": "12.1.4",
