--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "dependencies": {
         "@3rdweb/hooks": "^1.9.2",
         "@coinbase/wallet-sdk": "3.0.5",
+        "@truffle/hdwallet-provider": "^2.0.8",
         "ethers": "^5.6.4",
-        "ganache": "7.0.3",
+        "ganache": "^7.1.0",
         "next": "12.1.4",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "solc": "0.8.13",
-        "truffle-hdwallet-provider": "1.0.17",
         "use-wallet": "0.13.4"
     }
 }
