--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "dependencies": {
         "@3rdweb/hooks": "^1.9.2",
         "@coinbase/wallet-sdk": "3.0.5",
-<<<<<<< HEAD
         "@nextui-org/react": "^1.0.0-beta.6",
-=======
         "@truffle/hdwallet-provider": "^2.0.8",
->>>>>>> main
         "ethers": "^5.6.4",
         "ganache": "^7.1.0",
         "next": "12.1.4",
+        "next-themes": "^0.2.0",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "solc": "0.8.13",
